--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,16 @@
+
+# Created by https://www.toptal.com/developers/gitignore/api/go,visualstudiocode
+# Edit at https://www.toptal.com/developers/gitignore?templates=go,visualstudiocode
+
+### Go ###
 # Binaries for programs and plugins
 *.exe
 *.exe~
 *.dll
 *.so
 *.dylib
+
+seed-go-img
 
 # Test binary, built with `go test -c`
 *.test
@@ -13,3 +20,24 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+### dotenv ###
+.env
+
+### Go Patch ###
+/vendor/
+/Godeps/
+
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+
+# End of https://www.toptal.com/developers/gitignore/api/go,visualstudiocode
