--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,7 @@ steps:
   - task: Go@0
     inputs:
       command: 'get'
-      arguments: '-d' ./...
+      arguments: '-d ./...''
       workingDirectory: '$(System.DefaultWorkingDirectory)'
   - task: Go@0
     inputs:
