--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,7 @@ jobs:
       - checkout
 
       # specify any bash command here prefixed with `run: `
+      - run: go version
       - run: go build -v cmd/Main.go
       - run: go test -v ./... -covermode=count -coverprofile=coverage.out
 
