--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,20 +22,15 @@ jobs:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
 
-    - name: Get dependencies
-      run: |
-        go get -v -t -d ./...
-        if [ -f Gopkg.toml ]; then
-            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-            dep ensure
-        fi
+    - name: Test
+        run: |
+          go vet ./...
+          go test -v ./... -race -covermode=atomic -coverprofile=coverage.out
 
     - name: Build
       run: go build -v cmd/Main.go
 
-    - name: Test
-      run: go vet ./...
-      run: go test -v ./... -race -covermode=atomic -coverprofile=coverage.out
+
     
     - name: Build docker
       run: docker build . --file Dockerfile -t seed-go-img:$(date +%s)
