--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,12 +21,13 @@ jobs:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
 
-    - name: Test
-      run: |
-        go vet ./...
-        go test -v ./... -race -covermode=atomic -coverprofile=coverage.out
+    - name: Vet sources
+      run: go vet ./...
+        
+    - name: Test project
+      run: go test -v ./... -race -covermode=atomic -coverprofile=coverage.out
 
-    - name: Build
+    - name: Build image
       run: go build -v cmd/Main.go
 
     - name: Build docker
