fix/yml : fix typo

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,24 +3,31 @@
 
 build: off
 
-clone_folder: /usr/go/src/github.com/$username/$project
+clone_folder: /usr/go/src/github.com/sapiderman/seed-go
+
+image: 
+  - Ubuntu
 
 environment:
   GOPATH: /usr/go/
 
-  install: 
+install: 
   - go version
   - go get -u golang.org/x/lint/golint
+  
 stack: go 1.14
 
 before_test:
   - go vet ./...
 
-  test_script:
+test_script:
   - make test
 
 build_script:
-  - make build
+  - make docker
 
 artifacts:
-  - path: buildOutput/bin
+  - path: /usr/go/src/github.com/sapiderman/seed-go/seed-go-img
+    name: seed-go-img
+
+  
