feat/apm : added elastic apm 1. added elastic agent 2. removed buildkite.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,6 +25,7 @@ before_script:
 test_unit:
     stage: test
     script:
+        - go mod tidy 
         - go vet ./...
         - make test
     
