--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,7 +48,7 @@ stages:
               set -ex
               /home/vsts/go/bin/golint -set_exit_status cmd/... internal/... 
               go test ./... -cover -vet -all -v -short -covermode=count -coverprofile=coverage.out > test_results.txt
-              go-junit-report < test_results.txt > report.xml 
+              /home/vsts/go/bin/go-junit-report < test_results.txt > report.xml 
               /home/vsts/go/bin/gocover-cobertura < coverage.out > coverage.xml
           workingDirectory: '$(System.DefaultWorkingDirectory)'
           displayName: 'Run unit/coverage test'
