fix/ci : script ci debug

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,6 +41,7 @@ stages:
               go get -u github.com/jstemmer/go-junit-report
               go get github.com/axw/gocov/gocov
               go get github.com/AlekSi/gocov-xml
+              go get github.com/t-yuki/gocover-cobertura
               go get -u golang.org/x/lint/golint
           displayName: 'Load dependencies'
       
