fix/ci : debug pipeline

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,4 +31,4 @@ jobs:
       run: go build -v cmd/Main.go
 
     - name: Build docker
-      run: docker build . --file .dockerfile/Dockerfile -t seed-go-img:$(date +%s)
+      run: docker build . --file .docker/Dockerfile -t seed-go-img:$(date +%s)
