fix: shutdown uptime calc display

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ seed-go-img
 
 # Test binary, built with `go test -c`
 *.test
+_debug_bin
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
