--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -17,7 +17,7 @@ on:
   push:
 #    branches: [ master ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
     
 ###############
 # Set the Job #
